--- a/css/style.css
+++ b/css/style.css
@@ -443,5 +443,30 @@
 	margin-bottom: 24px;
 }
 
+.PNEzoom320 {
+    -ms-transform: scale(.592); 
+    -ms-transform-origin: 0 0;
+    -moz-transform: scale(.592);
+    -moz-transform-origin: 0 0;
+    -o-transform: scale(.592);
+    -o-transform-origin: 0 0;
+    -webkit-transform: scale(.592);
+    -webkit-transform-origin: 0 0;
+    transform: scale(.592);
+    transform-origin: 0 0;  
+}
+
+.PNEzoom800 {
+    -ms-transform: scale(1.482); 
+    -ms-transform-origin: 0 0;
+    -moz-transform: scale(1.482);
+    -moz-transform-origin: 0 0;
+    -o-transform: scale(1.482);
+    -o-transform-origin: 0 0;
+    -webkit-transform: scale(1.482);
+    -webkit-transform-origin: 0 0;
+    transform: scale(1.482); 
+    transform-origin: 0 0;  
+}
 
 
