Box and text shadow CSS support.
git-svn-id: https://plugins.svn.wordpress.org/plugnedit/trunk@1105474 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@
 .pneinline tfoot,
 .pneinline thead, 
 .pneinline tr, 
-.pneinline blockquote 
+.pneinline blockquote,
+.pneinline 
+
  {
 	border: 0px;
 	font-family: inherit;
@@ -26,6 +28,8 @@
 	line-height: normal;
 	border-spacing: 0px;
 	background-color: inherit;
+        text-shadow: none;
+        box-shadow: none;
 }
 
 .pneinline a {
